# jupy

./: LICENSE  README.md  pyproject.toml
jupy/: cli.py
