[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupy"
version = "0.1.0"
description = "A CLI tool to create Jupyter projects with virtual environments and basic dependencies"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name="Aryan Mathur", email="mathuraryan1119@gmail.com" }
]
dependencies = ["notebook", "numpy", "pandas", "matplotlib", "scikit-learn", "seaborn"]

[project.scripts]
jupy = "jupy.cli:main"



